# bevy_edge_detection

./: CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
assets/: edge_detection.wgsl
examples/: 3d_shapes.rs  simple.rs
src/: edge_detection.wgsl  lib.rs
