[package]
name = "bevy_edge_detection"
version = "0.15.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["AllenPocketGamer <allenpocketwork@gmail.com>"]
description = "A bevy plugin adding edge detection post processing effect"

[dependencies]
bevy = "0.15.1"

[dev-dependencies]
bevy_egui = "0.32.0"