[package]
name = "bevy_edge_detection"
version = "0.15.5"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["AllenPocketGamer <allenpocketwork@gmail.com>"]
description = "A bevy plugin adding edge detection post processing effect"
homepage = "https://github.com/AllenPocketGamer/bevy_edge_detection"
keywords = ["bevy", "plugin", "post-processing", "edge-detection"]
categories = ["game-engines", "graphics", "rendering"]

[dependencies]
bevy = "0.15.1"

[dev-dependencies]
bevy_egui = "0.32.0"
bevy_panorbit_camera = { version = "0.21.*", features = ["bevy_egui"] }